# uv-test

./: LICENSE  README.md  pyproject.toml
src/uv_test/: __init__.py
