[project]
name = "uv-test"
version = "0.1.0"
description = "Playing around with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.112.2"]

[project.scripts]
hello = "uv_test:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["mypy>=1.11.2", "poethepoet>=0.28.0", "ruff>=0.6.3"]

[tool.hatch.envs.default]
installer = "uv"

[tool.poe.tasks]
ruff.cmd = "ruff check ."
ruff.help = "Check the code with ruff"
format.cmd = "ruff format ."
format.help = "Format the code with ruff"
mypy.cmd = "mypy . --strict"
mypy.help = "Type check the code with mypy"
